<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/pastEvent"
            android:enabled="true"
            android:title="@string/pastEvents"
            android:icon="@drawable/ic_teams"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/nextEvent"
            android:enabled="true"
            android:title="@string/nextEvents"
            android:icon="@drawable/ic_teams"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/favorites"
            android:enabled="true"
            android:title="@string/favorites"
            android:icon="@drawable/ic_favorites"
            app:showAsAction="ifRoom"/>

</menu>