<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:id="@+id/detail_event"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".detail.DetailActivity">

    <android.support.v7.widget.Toolbar
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"

            android:id="@+id/toolbar"
            app:titleTextColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme"/>

    <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ScrollView

                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:padding="8dp"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/event_date"/>

                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/home_score"
                            android:padding="12dp"
                            android:textSize="30sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="@+id/textView4"
                            app:layout_constraintBottom_toBottomOf="@+id/textView4"
                            app:layout_constraintEnd_toStartOf="@+id/textView4"
                            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/homeLogo"
                            android:layout_marginStart="8dp"/>

                    <TextView
                            android:id="@+id/away_score"
                            android:padding="12dp"
                            android:textSize="30sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="@+id/textView4"
                            app:layout_constraintTop_toTopOf="@+id/textView4"
                            app:layout_constraintStart_toEndOf="@+id/textView4"
                            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/awayLogo"
                            android:layout_marginEnd="8dp"/>

                    <ImageView
                            android:id="@+id/homeLogo"
                            android:src="@drawable/ic_launcher_background"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp"
                            app:layout_constraintTop_toTopOf="@+id/textView4"
                            app:layout_constraintBottom_toBottomOf="@+id/textView4"
                            app:layout_constraintEnd_toStartOf="@+id/textView4" android:layout_marginEnd="32dp"
                            android:layout_marginTop="8dp"/>
                    <TextView
                            android:text="@string/vs"
                            android:textSize="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView4"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
                            app:layout_constraintVertical_bias="0.35000002"
                            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>

                    <ImageView
                            android:id="@+id/awayLogo"
                            android:src="@drawable/ic_launcher_background"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp"
                            app:layout_constraintBottom_toBottomOf="@+id/textView4"
                            app:layout_constraintTop_toTopOf="@+id/textView4"
                            app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginStart="32dp"
                            android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.49"
                    />
                    <TextView
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/homeName"
                            app:layout_constraintEnd_toEndOf="@+id/homeLogo"
                            app:layout_constraintStart_toStartOf="@+id/homeLogo"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/homeLogo" android:layout_marginBottom="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                    <TextView
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/awayName"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/awayLogo"
                            app:layout_constraintStart_toStartOf="@+id/awayLogo"
                            app:layout_constraintEnd_toEndOf="@+id/awayLogo"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginBottom="8dp"/>
                </android.support.constraint.ConstraintLayout>
                <LinearLayout
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <TextView
                            android:layout_gravity="top|start"
                            android:textAlignment="textStart"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/goals_home"/>
                    <TextView
                            android:layout_gravity="top"
                            android:text="@string/goals"
                            android:layout_marginStart="40dp"
                            android:layout_marginEnd="40dp"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:layout_gravity="top|end"
                            android:textAlignment="textEnd"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/goals_away"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:layout_gravity="top|start"
                            android:textAlignment="textStart"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/hshoot"/>
                    <TextView
                            android:layout_gravity="top"
                            android:id="@+id/Shots"
                            android:text="@string/shots"
                            android:layout_marginEnd="40dp"
                            android:layout_marginStart="40dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"/>
                    <TextView
                            android:layout_gravity="top|end"
                            android:textAlignment="textEnd"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="@+id/Shots"
                            android:id="@+id/ashoot"/>
                </LinearLayout>


                <TextView
                        android:text="@string/lineups"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:gravity="center"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:paddingTop="20dp"/>

                <LinearLayout
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:layout_gravity="top|start"
                            android:textAlignment="textStart"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/gk_Home"/>
                    <TextView
                            android:layout_gravity="top"
                            android:text="@string/goalkeeper"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"/>

                    <TextView
                            android:textAlignment="textEnd"
                            android:layout_gravity="top|end"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/gk_Away"/>

                </LinearLayout>
                <LinearLayout
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:textAlignment="textStart"
                            android:layout_gravity="top|start"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/df_Home"/>
                    <TextView
                            android:layout_gravity="top"
                            android:text="@string/defense"
                            android:layout_marginEnd="32dp"
                            android:layout_marginStart="32dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"/>
                    <TextView
                            android:textAlignment="textEnd"
                            android:layout_gravity="top|end"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/df_Away"/>

                </LinearLayout>
                <LinearLayout
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:textAlignment="textStart"
                            android:layout_gravity="top|start"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/mf_Home"/>
                    <TextView
                            android:layout_gravity="top"
                            android:text="@string/midfield"
                            android:layout_marginStart="32dp"
                            android:layout_marginEnd="32dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"/>
                    <TextView
                            android:textAlignment="textEnd"
                            android:layout_gravity="top|end"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/mf_Away"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:textAlignment="textStart"
                            android:layout_gravity="top|start"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/f_Home"/>
                    <TextView
                            android:layout_gravity="top"
                            android:layout_marginStart="32dp"
                            android:layout_marginEnd="32dp"
                            android:text="@string/forward"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"/>
                    <TextView
                            android:textAlignment="textEnd"
                            android:layout_gravity="top|end"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/f_Away"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
        <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>